# mpf-monitor

./: .gitignore  .travis.yml  IDEAS.md  MANIFEST.in  README.md  get_version.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  build_wheels.yml  run_tests.yml  test_build_deploy.yml
mpfmonitor/: _version.py  mpfmonitor.yaml
mpfmonitor/commands/: monitor.py
mpfmonitor/core/: bcp_client.py  devices.py  events.py  inspector.py  modes.py  mpfmon.py  playfield.py  variables.py
mpfmonitor/core/ui/: inspector.ui  searchable_table.ui  searchable_tree.ui
mpfmonitor/tests/: test_devices.py  test_events.py  test_inspector.py  test_modes.py  test_mpfmon.py  test_playfield.py
